# VarSpeedPython

./: LICENSE.md  README.md  easing_functions.py  pyproject.toml  varspeed.py
examples/: move_simple.py  move_simple_led.py  move_simple_servo.py  sequence_simple.py  sequence_simple_servo.py  two_sequences_at_once.py  two_sequences_at_once_led.py  two_sequences_at_once_servo.py
varspeed/: easing_functions.py  varspeed.py
